list sworker
